# quant-ml-research

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
configs/: default.yaml  walkforward.yaml
extensions/: README.md
notebooks/: 01_research_findings.ipynb
reports/: summary.json
scripts/: run_backtest.py  run_walkforward.py  smoke_test.py
src/quant_ml/: __init__.py  cli.py  config.py
src/quant_ml/backtest/: __init__.py  costs.py  engine.py  metrics.py
src/quant_ml/features/: __init__.py  technical.py
src/quant_ml/ml/: __init__.py  pipeline.py  tracking.py  walkforward.py
src/quant_ml/strategies/: __init__.py  base.py  ma_crossover.py  ml_strategy.py  rsi_mean_reversion.py
tests/: conftest.py  test_backtest_engine.py  test_costs.py  test_features.py  test_metrics.py  test_strategies.py  test_walkforward.py
